# cp.nvim

./: .gitignore  .luarc.json  .pre-commit-config.yaml  1621.rs  AI_DEBUG.md  README.md  biome.json  cp.nvim-scm-1.rockspec  flake.nix  justfile  pyproject.toml
.forgejo/issue_template/: bug_report.yaml  feature_request.yaml
.forgejo/workflows/: luarocks-nightly.yaml  luarocks.yaml
.github/: README.md
.github/ISSUE_TEMPLATE/: bug-report.md  config.yaml
.github/workflows/: luarocks.yaml  quality.yaml  redirect-pr-to-forgejo.yaml  test.yaml
doc/: cp.nvim.txt
lua/cp/: cache.lua  config.lua  constants.lua  credentials.lua  git_credential.lua  health.lua  init.lua  log.lua  login.lua  migration.lua  race.lua  restore.lua  scraper.lua  setup.lua  state.lua  stress.lua  submit.lua  utils.lua
lua/cp/commands/: cache.lua  init.lua  picker.lua
lua/cp/pickers/: fzf_lua.lua  init.lua  telescope.lua
lua/cp/runner/: execute.lua  run.lua  run_render.lua
lua/cp/ui/: edit.lua  layouts.lua  views.lua
plugin/: cp.lua
scrapers/: atcoder.py  base.py  codechef.py  codeforces.py  cses.py  kattis.py  language_ids.py  models.py  timeouts.py  usaco.py
scripts/: ci.sh  interact.py  stress.py
t/: 1068.cc  a.cc  cf_cli_debug.py  cf_cli_real.py  cf_exact.py  cf_hang_debug.py  minimal_init.lua
tests/: conftest.py  test_scrapers.py
tests/fixtures/codechef/: contests_past.json
tests/fixtures/kattis/: contest_open2024_problems.html  contests.html  problem_hello.html  problem_kth2024a.html  problem_kth2024b.html
tests/fixtures/usaco/: contests.html  dec24results.html  (+3 more)
