[project]
name = "scrapers"
version = "0.1.0"
description = "Competitive programming scrapers for a variety of web platforms."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "backoff>=2.2.1",
    "beautifulsoup4>=4.13.5",
    "curl-cffi>=0.13.0",
    "httpx>=0.28.1",
    "ndjson>=0.3.1",
    "pydantic>=2.11.10",
    "requests>=2.32.5",
]

[dependency-groups]
dev = [
    "types-beautifulsoup4>=4.12.0.20250516",
    "types-requests>=2.32.4.20250913",
    "pytest>=8.0.0",
    "pytest-mock>=3.12.0",
    "pre-commit>=4.3.0",
    "basedpyright>=1.31.6",
    "ruff>=0.14.2",
    "ty>=0.0.1a32",
]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.mypy]
ignore_missing_imports = true
